fixpix-ai-backend/fastapi.log
Checking model weights...
Traceback (most recent call last):
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/scripts/download_models.py", line 3, in <module>
    from tqdm import tqdm
ModuleNotFoundError: No module named 'tqdm'
Starting FixPix AI Backend...
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/uvicorn/__main__.py", line 4, in <module>
    uvicorn.main()
    ~~~~~~~~~~~~^^
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/click/core.py", line 1485, in __call__
    return self.main(*args, **kwargs)
           ~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/click/core.py", line 1406, in main
    rv = self.invoke(ctx)
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/click/core.py", line 1269, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/click/core.py", line 824, in invoke
    return callback(*args, **kwargs)
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/uvicorn/main.py", line 424, in main
    run(
    ~~~^
        app,
        ^^^^
    ...<46 lines>...
        h11_max_incomplete_event_size=h11_max_incomplete_event_size,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/uvicorn/main.py", line 594, in run
    server.run()
    ~~~~~~~~~~^^
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/uvicorn/server.py", line 67, in run
    return asyncio_run(self.serve(sockets=sockets), loop_factory=self.config.get_loop_factory())
  File "/opt/homebrew/Cellar/python@3.14/3.14.0/Frameworks/Python.framework/Versions/3.14/lib/python3.14/asyncio/runners.py", line 204, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "/opt/homebrew/Cellar/python@3.14/3.14.0/Frameworks/Python.framework/Versions/3.14/lib/python3.14/asyncio/runners.py", line 127, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "uvloop/loop.pyx", line 1518, in uvloop.loop.Loop.run_until_complete
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/uvicorn/server.py", line 71, in serve
    await self._serve(sockets)
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/uvicorn/server.py", line 78, in _serve
    config.load()
    ~~~~~~~~~~~^^
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/uvicorn/config.py", line 439, in load
    self.loaded_app = import_from_string(self.app)
                      ~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/venv/lib/python3.14/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
  File "/opt/homebrew/Cellar/python@3.14/3.14.0/Frameworks/Python.framework/Versions/3.14/lib/python3.14/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1398, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1371, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1342, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 938, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 762, in exec_module
  File "<frozen importlib._bootstrap>", line 491, in _call_with_frames_removed
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/main.py", line 5, in <module>
    from app.api.v1.api import api_router
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/app/api/v1/api.py", line 1, in <module>
    from app.api.v1.endpoints import restoration, health, super_resolution, inpaint, colorize, segmentation, parsing, generative, assistant
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/app/api/v1/endpoints/restoration.py", line 3, in <module>
    from app.services.image_service import image_service
  File "/Users/parthbhanderi/Library/Mobile Documents/com~apple~CloudDocs/FixPix/fixpix-ai-backend/app/services/image_service.py", line 168
    "mode": mode,
IndentationError: unexpected indent
